--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,7 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
+       android:background="@color/gray"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_bar">
 
