--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="160dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="메뉴" />
+    android:layout_height="160dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+   >
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       android:paddingTop="16dp"
+       android:paddingLeft="16dp"
+       android:paddingRight="16dp"
+       android:paddingBottom="16dp"
+       android:theme="@style/ThemeOverlay.AppCompat.Light">
+
+       <ImageView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:paddingTop="8dp"
+           app:srcCompat="@mipmap/ic_launcher"/>
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:paddingTop="8dp"
+           android:text="My account"
+           android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="your email"/>
+   </LinearLayout>
     
 </RelativeLayout>
