--- a/app/src/main/res/layout/fragment_day_add.xml
+++ b/app/src/main/res/layout/fragment_day_add.xml
@@ -6,9 +6,16 @@
     tools:context=".Fragment_day_add">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        />
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="할 일 추가"
+            android:textSize="15dp"/>
+    </LinearLayout>
 </FrameLayout>
