--- a/app/src/main/res/layout/filemain.xml
+++ b/app/src/main/res/layout/filemain.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"/>
 
     <ListView
-        android:id="@+id/list"
+        android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
