--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/rowtext"
         android:layout_width="fill_parent"
         android:layout_height="100px"
         android:textSize="23sp"
