--- a/app/src/main/res/layout/filemain.xml
+++ b/app/src/main/res/layout/filemain.xml
@@ -4,13 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <TextView
         android:id="@+id/path"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
     <ListView
-        android:id="@+id/list"
+        android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
