일정생성 및 todolist 구현

--- a/app/src/main/res/layout/fragment_months.xml
+++ b/app/src/main/res/layout/fragment_months.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="600dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment_months">
 
@@ -10,21 +10,27 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.prolificinteractive.materialcalendarview.MaterialCalendarView
             android:id="@+id/material_calendar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:mcv_selectionColor="#6D616F"/>
+            android:layout_height="380dp"
+            app:mcv_selectionColor="#6D616F" />
+
+        <TextView
+            android:id="@+id/date_text"
+            android:layout_width="match_parent"
+            android:layout_height="18dp"
+            android:text="2022년 12월 4일"
+            android:textColor="@color/black" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/schedule"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/schedule"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="vertical"/>
+            android:overScrollMode="never"/>
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -35,5 +41,5 @@
         android:layout_marginBottom="60dp"
         android:layout_gravity="bottom|end"
         android:src="@drawable/plus"
-        android:backgroundTint="#939393" />
+        android:backgroundTint="@color/littleRed" />
 </FrameLayout>
