--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -6,9 +6,26 @@
     tools:context=".Fragment_today">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="2022년 11월 20일"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/today_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="오늘 날짜"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/today_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"/>
+    </LinearLayout>
+
 
 </FrameLayout>
