--- a/app/src/main/res/layout/activity_add_schedule.xml
+++ b/app/src/main/res/layout/activity_add_schedule.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#939393"
+        android:background="@color/littleRed"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Title"
+        android:textSize="25dp"
         android:padding="15dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar2"/>
 
@@ -26,14 +27,141 @@
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#ccc"
+        android:background="@color/littleRed"
         app:layout_constraintTop_toBottomOf="@id/edit_title" />
 
+    <LinearLayout
+        android:id="@+id/layout_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/line">
+
+        <Button
+            android:id="@+id/start_clock"
+            android:text="시작"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            />
+        <Button
+            android:id="@+id/finish_clock"
+            android:text="종료"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+             />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/time_text_layout1"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/layout_btn">
+
+        <TextView
+            android:text="시작일"
+            android:textSize="18dp"
+            android:textAlignment="textStart"
+            android:layout_width="50dp"
+            android:layout_height="30dp"/>
+        <Button
+            android:id="@+id/start_date"
+            android:text="2022년 12월 4일"
+            android:textSize="10dp"
+            android:background="@color/white"
+            android:layout_width="100dp"
+            android:layout_height="40dp"/>
+        <TextView
+            android:id="@+id/start_text"
+            android:textSize="18dp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"/>
+    </LinearLayout>
+
+    <View
+        android:id="@+id/line2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/littleRed"
+        app:layout_constraintTop_toBottomOf="@id/time_text_layout1"/>
+
+    <LinearLayout
+        android:id="@+id/time_text_layout2"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/line2">
+
+        <TextView
+            android:text="종료일"
+            android:textSize="18dp"
+            android:textAlignment="textStart"
+            android:layout_width="50dp"
+            android:layout_height="30dp" />
+        <Button
+            android:id="@+id/finish_date"
+            android:text="2022년 12월 4일"
+            android:textSize="10dp"
+            android:background="@color/white"
+            android:layout_width="100dp"
+            android:layout_height="40dp"/>
+        <TextView
+            android:id="@+id/finish_text"
+            android:textSize="18dp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"/>
+    </LinearLayout>
+
+    <View
+        android:id="@+id/line3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/littleRed"
+        app:layout_constraintTop_toBottomOf="@id/time_text_layout2"/>
+
+
     <EditText
-        android:id="@+id/edit_memo"
+        android:id="@+id/edit_location"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:hint="메모"
+        android:drawableLeft="@drawable/ic_baseline_edit_location_24"
+        android:hint=" 장소"
         android:padding="15dp"
-        app:layout_constraintTop_toBottomOf="@id/line" />
+        app:layout_constraintTop_toBottomOf="@id/line3" />
+    <View
+        android:id="@+id/line4"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:background="@color/littleRed"
+        app:layout_constraintTop_toBottomOf="@+id/edit_location"/>
+    <Button
+        android:id="@+id/alarm"
+        android:text=" 알람"
+        android:textSize="18dp"
+        android:textAlignment="textStart"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_baseline_access_alarm_24"
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toBottomOf="@id/line4"/>
+    <Button
+        android:id="@+id/repeat"
+        android:text=" 반복"
+        android:textSize="18dp"
+        android:textAlignment="textStart"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_baseline_recycle"
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toBottomOf="@id/alarm"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
