--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,22 +17,7 @@
           android:theme="@style/ThemeOverlay.AppCompat.Dark"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize"
-          android:background="#939393">
-
-         <androidx.constraintlayout.widget.ConstraintLayout
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:paddingStart="0dp"
-             android:paddingEnd="0dp">
-
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/searchView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-         </androidx.constraintlayout.widget.ConstraintLayout>
+          android:background="@color/littleRed">
       </androidx.appcompat.widget.Toolbar>
 
 
@@ -41,11 +26,8 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_gravity="center">
-
          <include layout="@layout/nav_bottom"/>
-
       </FrameLayout>
-
    </LinearLayout>
 
    <com.google.android.material.navigation.NavigationView
