--- a/app/src/main/res/layout/fragment_day_add.xml
+++ b/app/src/main/res/layout/fragment_day_add.xml
@@ -2,7 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="550dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingHorizontal="15dp"
     tools:context=".Fragment_day_add">
 
     <!-- TODO: Update blank fragment layout -->
@@ -10,12 +12,77 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/mainTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="To do list"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
 
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/checkbox"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Monday"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_marginTop="15dp"/>
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                tools:text="5th"
+                android:layout_marginTop="15dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="할 일 추가"
-            android:textSize="15dp"/>
+            android:orientation="horizontal">
+
+            <View
+                android:id="@+id/topLine1"
+                android:layout_width="300dp"
+                android:layout_height="1dp"
+                android:background="@color/littleRed"
+                android:layout_marginTop="20dp"/>
+
+            <ImageButton
+                android:id="@+id/addTodo"
+                android:layout_width="47dp"
+                android:layout_height="47dp"
+                android:src="@drawable/ic_add_btn"
+                android:background="@drawable/bg_add_todo" />
+
+            <View
+                android:id="@+id/topLine2"
+                android:layout_width="100dp"
+                android:layout_height="1dp"
+                android:background="@color/littleRed"
+                android:layout_marginTop="20dp"/>
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvTodo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="30dp"
+            android:scrollbars="none"
+            android:overScrollMode="never"/>
     </LinearLayout>
+
 </FrameLayout>
