--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/setting_search"
+        android:icon="@drawable/search_icon"
+        android:title="검색"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/setting_save"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="설정"
