--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,13 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#EDEDED</color>
-    <color name="colorPrimary">#FF9800</color>
-    <color name="colorPrimaryDark">#F57C00</color>
-    <color name="colorAccent">#ffa008</color>
-    <color name="view_backg_color">#c7c7C7</color>
+    <color name="gray">#f5f5dc</color>
+    <color name="littleRed">#F05650</color>
 
-    <color name="colorPrimary_dark">#212121</color>
-    <color name="colorAccent_dark" >#FF9800</color>
-    <color name="colorPrimaryDark_dark" >#DE000000</color>
+    <!-- Todolist color -->
+    <color name="main_color">#565c6e</color>
+    <color name="list_color_done">#A9EFBF</color>
+    <color name="list_color_default">#dcd4d0</color>
+    <color name="light_main_color">#dcdcdc</color>
 </resources>
