--- a/app/src/main/res/layout/activity_edite_note.xml
+++ b/app/src/main/res/layout/activity_edite_note.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
+        android:background="@color/mainTheme"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
 
